# gatekeeper_dev

./: .gitignore  Dockerfile  docker-compose.yaml  readme.md
colcon_ws/: frames.gv
colcon_ws/install/: local_setup.sh  setup.sh
colcon_ws/install/dasc_msgs/include/dasc_msgs/msg/: quad_setpoint.h  (+3 more)
colcon_ws/install/dasc_msgs/share/dasc_msgs/: package.ps1  package.sh  package.xml
colcon_ws/install/dasc_robot/lib/dasc_robot/: example_control  example_control_geometric  example_control_geometric_acceleration  example_control_geometric_velocity  example_control_multi_rover  joystick_controller  trajectory_follower
colcon_ws/install/dasc_robot/share/dasc_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
colcon_ws/install/experiment/share/experiment/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
colcon_ws/install/gatekeeper/lib/gatekeeper/: gatekeeper  nominal_controller
colcon_ws/install/gatekeeper/share/gatekeeper/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
colcon_ws/install/px4_msgs/share/px4_msgs/: package.sh
colcon_ws/install/px4_ros_com/include/px4_ros_com/: frame_transforms.h
colcon_ws/install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  sensor_combined_listener  vehicle_gps_position_listener
colcon_ws/install/px4_ros_com/share/px4_ros_com/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
colcon_ws/install/realsense_gazebo_plugin/share/realsense_gazebo_plugin/: local_setup.sh  package.ps1  package.sh
colcon_ws/log/: latest_build
colcon_ws/src/dasc_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/dasc_msgs/msg/: QuadSetpoint.msg  QuadTrajectory.msg
colcon_ws/src/experiment/: CMakeLists.txt  experiment.rviz  package.xml
colcon_ws/src/experiment/launch/: launch_exp.py  octomap_mapping.launch.xml
colcon_ws/src/experiment/worlds/: warehouse.world
colcon_ws/src/gatekeeper/: CMakeLists.txt
colcon_ws/src/gatekeeper/include/gatekeeper/: dynamics.hpp  gatekeeper.hpp  transforms.hpp  visualization.hpp
colcon_ws/src/gatekeeper/src/: .gatekeeper.cpp.swp  dynamics.cpp  gatekeeper.cpp  joystick_controller.cpp  nominal_controller.cpp  old_joystick_controller.cpp  old_joystick_controller_2.cpp  old_joystick_controller_3.cpp  transforms.cpp
(+657 files in other folders)
